Small optimizations related to virtual thread usage